tests/ui/lifetimes/issue-79187.stderr
error: implementation of `FnOnce` is not general enough
  --> $DIR/issue-79187.rs:5:5
   |
LL |     thing(f);
   |     ^^^^^^^^ implementation of `FnOnce` is not general enough
   |
   = note: closure with signature `fn(&'2 u32)` must implement `FnOnce<(&'1 u32,)>`, for any lifetime `'1`...
   = note: ...but it actually implements `FnOnce<(&'2 u32,)>`, for some specific lifetime `'2`
help: consider adding an explicit type annotation to the closure's argument
   |
LL |     let f = |_: &u32| ();
   |               ++++++

error: implementation of `FnOnce` is not general enough
  --> $DIR/issue-79187.rs:5:5
   |
LL |     thing(f);
   |     ^^^^^^^^ implementation of `FnOnce` is not general enough
   |
   = note: closure with signature `fn(&'2 u32)` must implement `FnOnce<(&'1 u32,)>`, for any lifetime `'1`...
   = note: ...but it actually implements `FnOnce<(&'2 u32,)>`, for some specific lifetime `'2`
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
help: consider adding an explicit type annotation to the closure's argument
   |
LL |     let f = |_: &u32| ();
   |               ++++++

error: aborting due to 2 previous errors

